# tool_wordcount

./: .gitignore  README.md  pyproject.toml
shakespeare_research/: .env  app.py
shakespeare_research/modules/: logger.py  research.py
shakespeare_research/tmp/: merged_files.txt
src/output/: data.json
